<resources>
    <string name="app_name">Quora2.0</string>

    <string name="openNav">OpenNavigation</string>
    <string name="closeNav">CloseNavigation</string>

    <string name="Fiction"> Fiction Literature </string>
    <string name="Non_Fiction"> Non-Fiction Literature </string>
    <string name="Poetry">Poetry Literature</string>
    <string name="Short_stories">Short-stories Literature</string>
    <string name="Clothing">Clothing Lifestyle</string>
    <string name="Footwear">Footwear Lifestyle</string>
    <string name="Watches">Watches Lifestyle</string>
    <string name="Accessories">Accessories Lifestyle</string>
    <string name="Coding">Coding</string>
    <string name="Android">Android</string>
    <string name="iOS">iOS</string>
    <string name="Bollywood">Bollywood Movies</string>
    <string name="Hollywood">Hollywood Movies</string>
    <string name="Tollywood">Tollywood Movies</string>
    <string name="Punjabi">Punjabi Movies</string>
    <string name="NorthIndian">NorthIndian Food</string>
    <string name="SouthIndian">SouthIndian Food</string>
    <string name="Italian">Italian Food</string>
    <string name="Chinese">Chinese</string>
    <string name="Football">Football</string>
    <string name="Cricket">Cricket</string>
    <string name="Badminton">Badminton</string>
    <string name="Tennis">Tennis</string>

    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>

    <string-array name="category_paths">
        <item> Fiction Literature </item>
        <item> Non-Fiction Literature </item>
        <item>Poetry Literature</item>
        <item>Short-stories Literature</item>
        <item>Clothing Lifestyle</item>
        <item>Footwear Lifestyle</item>
        <item>Watches Lifestyle</item>
        <item>Accessories Lifestyle</item>
        <item>Coding</item>
        <item>Android</item>
        <item>iOS</item>
        <item>Bollywood Movies</item>
        <item>Hollywood Movies</item>
        <item>Tollywood Movies</item>
        <item>Punjabi Movies</item>
        <item>NorthIndian Food</item>
        <item>SouthIndian Food</item>
        <item>Italian Food</item>
        <item>Chinese</item>
        <item>Football</item>
        <item>Cricket</item>
        <item>Badminton</item>
        <item>Tennis</item>
    </string-array>
</resources>

    <!--    [ "Fiction","Non_Fiction","Poetry","Short_stories","Clothing","Footwear","Watches","Accessories","Coding","Android","iOS","Bollywood","Hollywood","Tollywood","Punjabi","NorthIndian","SouthIndian","Italian","Chinese","Football","Cricket","Badminton","Tennis"]-->